Añadida página principal donde se selecciona por Chat o por imagenes) Modificadas rutas para ambas páginas. Falta arreglar la página de selección de imagenes app.py

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 # Archivo de ejemplo para variables de entorno
 # Copia este archivo a .env y reemplaza "tu_clave_de_api_aqui" con tu clave real
 
-OPENAI_API_KEY=tu_clave_de_api_aqui
+# Archivo con variables de entorno sensibles
+
+# Clave de la API de OpenAI
+OPENAI_API_KEY=
+
+# URI de MongoDB Atlas
+MONGO_URI=
+
+# Secret Key para el manejo de sesiones
+FLASK_SECRET_KEY=
